# querysight

./: .env.example  .flake8  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml  querysight.py  requirements.txt  streamlit_app.py
.github/: python-linter.yml
dags/: querysight_data_preparation.py
tests/: test_ai_suggester.py  test_cache_manager.py  test_data_acquisition.py  test_dbt_analyzer.py  test_dbt_analyzer_integration.py  test_pdf_generator.py  test_sampling_wizard.py  test_sql_parser.py
utils/: ai_suggester.py  cache_manager.py  config.py  data_acquisition.py  dbt_analyzer.py  dbt_mapper.py  dbt_model_generator.py  filtering.py  logger.py  logger_config.py  models.py  pdf_generator.py  sampling_wizard.py  sql_parser.py  visualization.py
